<resources>
    <string name="app_name">Lab2_YukiWaka</string>
    <string name="toppings">Toppings</string>
    <string name="pizza_order">Pizza Order</string>
    <string name="size">Size</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="place_the_order">Place the Order</string>
    <string name="order_type">Order Type</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="onions">Onions</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="textview">TextView</string>
</resources>