<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/pizza_order"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="94dp"
        android:text="@string/size"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="11dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick= "radioButtonChecked"
            android:text="@string/large" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick= "radioButtonChecked"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick= "radioButtonChecked"
            android:text="@string/small" />

    </RadioGroup>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="216dp"
        android:text="@string/toppings"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="257dp">

        <CheckBox
            android:id="@+id/pepperoni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkBoxSelected"
            android:text="@string/pepperoni" />

        <CheckBox
            android:id="@+id/greenPepper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkBoxSelected"
            android:text="@string/green_pepper" />

        <CheckBox
            android:id="@+id/onions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkBoxSelected"
            android:text="@string/onions" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="124dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="167dp">

        <RadioButton
            android:id="@+id/pickUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="orderTypeChecked"
            android:text="@string/pickup" />

        <RadioButton
            android:id="@+id/delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="orderTypeChecked"
            android:text="@string/delivery" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="339dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/place_the_order"
        android:textAllCaps="false"
        android:textColor="#0E0000"
        android:onClick= "placeOrder"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="285dp"
        android:text="@string/order_type"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/displayText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="19dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>